[package]
name = "spell"
version = "0.1.5"
authors = ["Nicolas Bigaouette <nbigaouette@elementai.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["spell", "lcs", "log", "parsing"]
categories = ["parsing", "science", "text-processing", "value-formatting"]
repository = "https://github.com/nbigaouette/spell-rs"
homepage = "https://github.com/nbigaouette/spell-rs"
documentation = "https://docs.rs/spell"
description = "Spell is a Streaming Parser for Event Logs using an LCS (Longest Common Subsequence)"

[badges]
travis-ci = { repository = "nbigaouette/spell-rs" }

[dependencies]
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
csv = "1.0.5"

[workspace]
members = [
    ".",
    "python/pyspellrs",
]
