[package]
name = "pyspellrs"
version = "0.1.5"
authors = ["Nicolas Bigaouette <nbigaouette@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "pyspellrs"
crate-type = ["cdylib"]

[dependencies]
spell = { path = "../.." }
log = "0.4"
env_logger = "0.6"

[build-dependencies]
cbindgen = "0.8"

